src/test/resources/semantic/declarations/error/TC_ERROR_DOBLE_METODO.ru
/? ERROR: SEMANTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: | 
/? | LINEA 13 | COLUMNA 11 | El método 'm1' se ha declarado más de una vez en la estructura 'A'. | 
struct A{

}

impl A{
    fn m1()->void{

    }

    st fn m1()->Int{

    }
}
start{

}
